@startuml
skinparam state {
    BackgroundColor HoneyDew
}

[*] --> SUBMITTED

SUBMITTED --> PENDING : request_distributed [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionProcessingServiceImpl.java#L106 *]]
SUBMITTED --> COMPLETED : request_completed [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionProcessingServiceImpl.java#L107 1]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L131 2]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L130 3]] [[https://github.com/ONSdigital/rm-notify-gateway/blob/main/src/main/java/uk/gov/ons/ctp/response/notify/service/impl/NotifyServiceImpl.java#L227 4]]
SUBMITTED --> ABORTED : request_cancelled [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionServiceImpl.java#L109 *]]

PENDING --> SUBMITTED : request_failed
PENDING --> CANCEL_SUBMITTED : request_cancelled [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionServiceImpl.java#L109 *]]
PENDING --> ACTIVE  : request_accepted  [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/service/impl/ActionExportServiceImpl.java#L95 1]] [[https://github.com/ONSdigital/rm-notify-gateway/blob/main/src/main/java/uk/gov/ons/ctp/response/notify/message/impl/ActionInstructionReceiverImpl.java#L64 2]]
PENDING --> DECLINED : request_declined [[https://github.com/ONSdigital/rm-notify-gateway/blob/main/src/main/java/uk/gov/ons/ctp/response/notify/message/impl/ActionInstructionReceiverImpl.java#L76 *]]
PENDING --> COMPLETED : request_completed [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionProcessingServiceImpl.java#L107 1]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L131 2]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L130 3]] [[https://github.com/ONSdigital/rm-notify-gateway/blob/main/src/main/java/uk/gov/ons/ctp/response/notify/service/impl/NotifyServiceImpl.java#L227 4]]
PENDING --> COMPLETED : request_completed_deactivate
PENDING --> COMPLETED : request_completed_disable

ACTIVE --> SUBMITTED : request_failed
ACTIVE --> CANCEL_SUBMITTED : request_cancelled  [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionServiceImpl.java#L109 *]]
ACTIVE --> COMPLETED : request_completed  [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionProcessingServiceImpl.java#L107 1]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L131 2]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L130 3]] [[https://github.com/ONSdigital/rm-notify-gateway/blob/main/src/main/java/uk/gov/ons/ctp/response/notify/service/impl/NotifyServiceImpl.java#L227 4]]
ACTIVE --> COMPLETED : request_completed_deactivate
ACTIVE --> COMPLETED : request_completed_disable

COMPLETED --> COMPLETED : request_cancelled [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionServiceImpl.java#L109 *]]

' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_cancelled
' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_failed
' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_accepted
' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_declined
' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_completed  [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionProcessingServiceImpl.java#L107 1]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L131 2]] [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/message/impl/SftpServicePublisherImpl.java#L130 3]] [[https://github.com/ONSdigital/rm-notify-gateway/blob/main/src/main/java/uk/gov/ons/ctp/response/notify/service/impl/NotifyServiceImpl.java#L227 4]]
' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_completed_deactivate
' CANCEL_SUBMITTED --> CANCEL_SUBMITTED : request_completed_disable
CANCEL_SUBMITTED --> CANCEL_PENDING : cancellation_distributed [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionProcessingServiceImpl.java#L134 *]]

note right of CANCEL_SUBMITTED
CANCEL_SUBMITTED -> CANCEL_SUBMITTED
messages not shown for brevity
end note

note left of CANCEL_PENDING
CANCEL_PENDING -> CANCEL_PENDING
messages not shown for brevity
end note

' CANCEL_PENDING --> CANCEL_PENDING : request_cancelled
' CANCEL_PENDING --> CANCEL_PENDING : request_failed
' CANCEL_PENDING --> CANCEL_PENDING : request_accepted
' CANCEL_PENDING --> CANCEL_PENDING : request_declined
' CANCEL_PENDING --> CANCEL_PENDING : request_completed
' CANCEL_PENDING --> CANCEL_PENDING : request_completed_deactivate
' CANCEL_PENDING --> CANCEL_PENDING : request_completed_disable
CANCEL_PENDING --> CANCEL_SUBMITTED : cancellation_failed [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/service/impl/ActionExportServiceImpl.java#L121 *]]
CANCEL_PENDING --> CANCELLING : cancellation_accepted
CANCEL_PENDING --> CANCELLED : cancellation_completed [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/service/impl/ActionExportServiceImpl.java#L121 *]]

CANCELLING --> CANCELLING : request_cancelled  [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionServiceImpl.java#L109 *]]
CANCELLING --> CANCEL_SUBMITTED : cancellation_failed [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/service/impl/ActionExportServiceImpl.java#L121 *]]
CANCELLING --> CANCELLED : cancellation_completed [[https://github.com/ONSdigital/rm-actionexporter-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/export/service/impl/ActionExportServiceImpl.java#L121 *]]

CANCELLED --> CANCELLED : request_cancelled [[https://github.com/ONSdigital/rm-action-service/blob/main/src/main/java/uk/gov/ons/ctp/response/action/service/impl/ActionServiceImpl.java#L109 *]]

@enduml